fix: overscroll behavior, log horizontal scroll, tooltip improvements

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+
+  html,
   body {
     @apply bg-zinc-950 text-zinc-100 font-sans antialiased m-0 p-0;
+    overscroll-behavior: none;
   }
 }
